--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata & Required Settings -->
+    <!-- 
+        Name: Todd Maurice Upshaw (Desert Eagle)
+        Date: 2025
+        Purpose: Expanding Week 1 portfolio with control flow, loops, dark mode, and dynamic content.
+    -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Homepage</title>
@@ -13,33 +18,47 @@
             margin: 0;
             padding: 0;
             background: #f4f4f4;
+            transition: background 0.4s, color 0.4s;
         }
+
+        /* Dark Mode Styling */
+        .dark-mode {
+            background: #121212;
+            color: white;
+        }
+
         header {
             background: #333;
             color: #fff;
             padding: 15px;
             text-align: center;
         }
+
         nav {
             background: #444;
             padding: 10px;
             text-align: center;
         }
+
         nav a {
             color: white;
             margin: 0 15px;
             text-decoration: none;
             font-weight: bold;
         }
-        nav a:hover {
-            color: #00e1ff;
-        }
+
         section {
             padding: 20px;
             background: white;
             margin: 20px;
             border-radius: 8px;
         }
+
+        .dark-mode section {
+            background: #1e1e1e;
+            color: white;
+        }
+
         img {
             width: 200px;
             height: 150px;
@@ -47,11 +66,13 @@
             margin-right: 10px;
             border-radius: 5px;
         }
+
         form input, form textarea {
             width: 100%;
             padding: 10px;
             margin-top: 10px;
         }
+
         form button {
             background: #333;
             color: white;
@@ -60,87 +81,141 @@
             margin-top: 10px;
             cursor: pointer;
         }
-        form button:hover {
-            background: #00a8c6;
+
+        /* Featured Content Styling */
+        .featured-box {
+            border: 2px solid #0077ff;
+            padding: 15px;
+            border-radius: 8px;
+            margin-top: 10px;
+        }
+
+        /* Dark mode for box */
+        .dark-mode .featured-box {
+            border-color: #00c8ff;
+        }
+
+        #darkModeToggle {
+            margin: 15px;
+            transform: scale(1.3);
         }
     </style>
 </head>
 
 <body>
-    <!-- Personalized Welcome Message -->
+
+    <!-- ⭐ Dark Mode Toggle -->
+    <label style="margin-left: 20px;">
+        <input type="checkbox" id="darkModeToggle"> Dark Mode
+    </label>
+
     <header>
         <h1 id="welcomeMessage">Welcome to My Portfolio</h1>
     </header>
 
-    <!-- Navigation Menu -->
     <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
+        <a href="#featured">Featured Content</a>
         <a href="#contact">Contact</a>
     </nav>
 
-    <!-- About Section -->
+    <!-- ⭐ About Section with Skills Loop -->
     <section id="about">
         <h2>About Me</h2>
-        <p>
-            Hello! My name is Des, and I am an aspiring software developer currently focusing on JavaScript, 
-            web development, and building clean, efficient applications. I enjoy learning new technologies 
-            and creating projects that challenge my creativity and technical skills.
-        </p>
+        <p>Hello! My name is Des, and I am an aspiring software developer focusing on full-stack development.</p>
+
+        <h3>My Skills</h3>
+        <ul id="skillsList"></ul> <!-- JS loop fills this -->
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
-        <p>Below are some of my GitHub projects (or placeholders if no projects exist yet):</p>
+        <p>Below are some of my GitHub projects:</p>
 
-        <a href="https://github.com/yourusername/project1" target="_blank">
-            <img src="https://via.placeholder.com/200x150" alt="Project 1">
-        </a>
+        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
+        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
+        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
+    </section>
 
-        <a href="https://github.com/yourusername/project2" target="_blank">
-            <img src="https://via.placeholder.com/200x150" alt="Project 2">
-        </a>
+    <!-- ⭐ Featured Content Section (conditional logic) -->
+    <section id="featured">
+        <h2>Featured Content</h2>
 
-        <a href="https://github.com/yourusername/project3" target="_blank">
-            <img src="https://via.placeholder.com/200x150" alt="Project 3">
-        </a>
+        <div id="universityResources" class="featured-box">
+            <h3>University Resources</h3>
+            <a href="https://www.ecpi.edu" target="_blank">ECPI Program Homepage</a>
+        </div>
+
+        <div id="personalProjects" class="featured-box">
+            <h3>Personal Projects</h3>
+            <a href="https://github.com" target="_blank"><img src="https://via.placeholder.com/200x150"></a>
+        </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out using the form below:</p>
 
-        <form>
+        <form id="contactForm">
             <label>Your Name:</label>
-            <input type="text" name="senderName" placeholder="Enter your name">
+            <input type="text" id="senderName" placeholder="Enter your name">
 
-            <label>Your Email Address:</label>
-            <input type="email" name="email" placeholder="Enter your email">
+            <label>Your Email:</label>
+            <input type="email" id="email" placeholder="Enter your email">
 
             <label>Subject:</label>
-            <input type="text" name="subject" placeholder="Subject">
+            <input type="text" id="subject" placeholder="Subject">
 
             <label>Message:</label>
-            <textarea name="message" placeholder="Write your message..." rows="6"></textarea>
+            <textarea id="message" rows="6"></textarea>
 
             <button type="submit">Submit</button>
         </form>
     </section>
 
-    <!-- JavaScript Interaction -->
     <script>
-        // Prompt user for their name
-        // Store the input in a variable
+        /* ⭐ Welcome Message (Week 1) */
         let userName = prompt("Welcome! What is your name?");
-
-        // Update the welcome message dynamically
-        // Use conditional so empty input doesn't break page
         if (userName && userName.trim() !== "") {
-            document.getElementById("welcomeMessage").textContent =
-                "Welcome, " + userName + "!";
+            document.getElementById("welcomeMessage").textContent = "Welcome, " + userName + "!";
         }
+
+        /* ⭐ Loop: Display Skills */
+        const skills = ["HTML", "CSS", "JavaScript", "Git", "GitHub"];
+        let list = document.getElementById("skillsList");
+
+        skills.forEach(skill => {
+            let li = document.createElement("li");
+            li.textContent = skill;
+            list.appendChild(li);
+        });
+
+        /* ⭐ Conditional Logic: Show Divs */
+        const projectsCount = 3; // change if needed
+
+        if (projectsCount < 3) {
+            // show both
+            document.getElementById("universityResources").style.display = "block";
+            document.getElementById("personalProjects").style.display = "block";
+        } else {
+            // hide university resources
+            document.getElementById("universityResources").style.display = "none";
+        }
+
+        /* ⭐ Dark Mode Toggle */
+        document.getElementById("darkModeToggle").addEventListener("change", function () {
+            document.body.classList.toggle("dark-mode");
+        });
+
+        /* ⭐ Form Submit Event */
+        document.getElementById("contactForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            let name = document.getElementById("senderName").value;
+            alert("Thank you, " + name + "! Your message has been sent.");
+        });
     </script>
 
 </body>
