--- a/index.html
+++ b/index.html
@@ -3,108 +3,32 @@
 <head>
     <!-- 
         Name: Todd Maurice Upshaw (Desert Eagle)
-        Date: 2025
-        Purpose: Expanding Week 1 portfolio with control flow, loops, dark mode, and dynamic content.
+        Date: 2025-11-30
+        Purpose: Week 1 portfolio expanded with dynamic DOM elements, timed messages, and interactive content.
     -->
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio Homepage</title>
-
+    <title>My Interactive Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background: #f4f4f4;
-            transition: background 0.4s, color 0.4s;
-        }
-
-        /* Dark Mode Styling */
-        .dark-mode {
-            background: #121212;
-            color: white;
-        }
-
-        header {
-            background: #333;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-        }
-
-        nav {
-            background: #444;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        section {
-            padding: 20px;
-            background: white;
-            margin: 20px;
-            border-radius: 8px;
-        }
-
-        .dark-mode section {
-            background: #1e1e1e;
-            color: white;
-        }
-
-        img {
-            width: 200px;
-            height: 150px;
-            object-fit: cover;
-            margin-right: 10px;
-            border-radius: 5px;
-        }
-
-        form input, form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-        }
-
-        form button {
-            background: #333;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-
-        /* Featured Content Styling */
-        .featured-box {
-            border: 2px solid #0077ff;
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 10px;
-        }
-
-        /* Dark mode for box */
-        .dark-mode .featured-box {
-            border-color: #00c8ff;
-        }
-
-        #darkModeToggle {
-            margin: 15px;
-            transform: scale(1.3);
-        }
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f4f4f4; transition: background 0.4s, color 0.4s; }
+        .dark-mode { background: #121212; color: white; }
+        header { background: #333; color: #fff; padding: 15px; text-align: center; }
+        nav { background: #444; padding: 10px; text-align: center; }
+        nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+        section { padding: 20px; background: white; margin: 20px; border-radius: 8px; }
+        .dark-mode section { background: #1e1e1e; color: white; }
+        img { width: 200px; height: 150px; object-fit: cover; margin-right: 10px; border-radius: 5px; }
+        form input, form textarea { width: 100%; padding: 10px; margin-top: 10px; }
+        form button { background: #333; color: white; padding: 10px 15px; border: none; margin-top: 10px; cursor: pointer; }
+        .featured-box { border: 2px solid #0077ff; padding: 15px; border-radius: 8px; margin-top: 10px; }
+        .dark-mode .featured-box { border-color: #00c8ff; }
+        #darkModeToggle { margin: 15px; transform: scale(1.3); }
+        #notification { text-align: center; font-weight: bold; color: green; margin-bottom: 10px; display: none; }
     </style>
 </head>
-
 <body>
 
-    <!-- ⭐ Dark Mode Toggle -->
+    <!-- Dark Mode Toggle -->
     <label style="margin-left: 20px;">
         <input type="checkbox" id="darkModeToggle"> Dark Mode
     </label>
@@ -120,34 +44,31 @@
         <a href="#contact">Contact</a>
     </nav>
 
-    <!-- ⭐ About Section with Skills Loop -->
+    <!-- Notification message (added dynamically after delay) -->
+    <div id="notification"></div>
+
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>Hello! My name is Des, and I am an aspiring software developer focusing on full-stack development.</p>
-
         <h3>My Skills</h3>
-        <ul id="skillsList"></ul> <!-- JS loop fills this -->
+        <ul id="skillsList"></ul>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
         <p>Below are some of my GitHub projects:</p>
-
-        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
-        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
-        <a href="#"><img src="https://via.placeholder.com/200x150" alt=""></a>
+        <div id="projectsGallery"></div>
     </section>
 
-    <!-- ⭐ Featured Content Section (conditional logic) -->
+    <!-- Featured Content Section -->
     <section id="featured">
         <h2>Featured Content</h2>
-
         <div id="universityResources" class="featured-box">
             <h3>University Resources</h3>
             <a href="https://www.ecpi.edu" target="_blank">ECPI Program Homepage</a>
         </div>
-
         <div id="personalProjects" class="featured-box">
             <h3>Personal Projects</h3>
             <a href="https://github.com" target="_blank"><img src="https://via.placeholder.com/200x150"></a>
@@ -157,64 +78,83 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-
         <form id="contactForm">
             <label>Your Name:</label>
             <input type="text" id="senderName" placeholder="Enter your name">
-
             <label>Your Email:</label>
             <input type="email" id="email" placeholder="Enter your email">
-
             <label>Subject:</label>
             <input type="text" id="subject" placeholder="Subject">
-
             <label>Message:</label>
             <textarea id="message" rows="6"></textarea>
-
             <button type="submit">Submit</button>
         </form>
     </section>
 
     <script>
-        /* ⭐ Welcome Message (Week 1) */
+        // Welcome message
         let userName = prompt("Welcome! What is your name?");
         if (userName && userName.trim() !== "") {
             document.getElementById("welcomeMessage").textContent = "Welcome, " + userName + "!";
         }
 
-        /* ⭐ Loop: Display Skills */
+        // Skills loop
         const skills = ["HTML", "CSS", "JavaScript", "Git", "GitHub"];
-        let list = document.getElementById("skillsList");
-
+        const skillsList = document.getElementById("skillsList");
         skills.forEach(skill => {
             let li = document.createElement("li");
             li.textContent = skill;
-            list.appendChild(li);
+            skillsList.appendChild(li);
         });
 
-        /* ⭐ Conditional Logic: Show Divs */
-        const projectsCount = 3; // change if needed
+        // Projects gallery dynamically
+        const projectsGallery = document.getElementById("projectsGallery");
+        for (let i = 1; i <= 3; i++) {
+            let img = document.createElement("img");
+            img.src = `https://via.placeholder.com/200x150?text=Project+${i}`;
+            img.alt = `Project ${i}`;
+            projectsGallery.appendChild(img);
+        }
 
+        // Conditional display for featured boxes
+        const projectsCount = 3;
         if (projectsCount < 3) {
-            // show both
             document.getElementById("universityResources").style.display = "block";
-            document.getElementById("personalProjects").style.display = "block";
         } else {
-            // hide university resources
             document.getElementById("universityResources").style.display = "none";
         }
 
-        /* ⭐ Dark Mode Toggle */
+        // Dark mode toggle
         document.getElementById("darkModeToggle").addEventListener("change", function () {
             document.body.classList.toggle("dark-mode");
         });
 
-        /* ⭐ Form Submit Event */
+        // Notification after 2 seconds
+        setTimeout(() => {
+            const notification = document.getElementById("notification");
+            notification.textContent = "Check out my new projects below!";
+            notification.style.display = "block";
+        }, 2000);
+
+        // Contact Form with timed submission
         document.getElementById("contactForm").addEventListener("submit", function (event) {
             event.preventDefault();
+            const form = this;
+            const notification = document.getElementById("notification");
 
-            let name = document.getElementById("senderName").value;
-            alert("Thank you, " + name + "! Your message has been sent.");
+            // Show sending message
+            notification.textContent = "Sending message...";
+            notification.style.color = "orange";
+            notification.style.display = "block";
+
+            setTimeout(() => {
+                const name = document.getElementById("senderName").value;
+                notification.textContent = "Thank you, " + name + "! Your message has been sent.";
+                notification.style.color = "green";
+
+                // Reset form
+                form.reset();
+            }, 2500);
         });
     </script>
 
