Revamp portfolio layout and add dark mode feature
Updated the portfolio page layout and styles, added dark mode toggle, and improved project display.

--- a/index.html
+++ b/index.html
@@ -1,59 +1,320 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Todd Upshaw</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interactive Profile Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: white;
+      color: black;
+    }
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f5f5f5;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #222;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        #projects {
-            padding: 30px;
-        }
-        .project-card {
-            background: white;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-        }
-        .project-card img {
-            width: 120px;
-        }
-        .project-card a {
-            display: inline-block;
-            margin-top: 10px;
-            text-decoration: none;
-            padding: 8px 12px;
-            background: #222;
-            color: white;
-            border-radius: 6px;
-        }
-    </style>
+    .dark-mode {
+      background-color: #121212;
+      color: #f0f0f0;
+    }
+
+    header, nav, main, footer {
+      margin-bottom: 20px;
+    }
+
+    nav a {
+      margin-right: 15px;
+      text-decoration: none;
+    }
+
+    #skills-list {
+      margin: 10px 0;
+      padding-left: 20px;
+    }
+
+    form input, form textarea {
+      display: block;
+      margin-bottom: 10px;
+      width: 300px;
+    }
+
+    .toggle-container {
+      margin-top: 10px;
+    }
+
+    /* === Modal Styles === */
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      max-width: 400px;
+      text-align: center;
+      position: relative;
+    }
+
+    .modal.hidden {
+      display: none;
+    }
+
+    .close-button {
+      position: absolute;
+      top: 0.5rem;
+      right: 1rem;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    /* === Tooltip Styles === */
+    .tooltip {
+      position: relative;
+    }
+
+    .tooltip::after {
+      content: attr(data-tooltip);
+      position: absolute;
+      bottom: 125%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #333;
+      color: #fff;
+      padding: 6px 10px;
+      border-radius: 4px;
+      font-size: 0.85rem;
+      white-space: nowrap;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+      z-index: 100;
+    }
+
+    .tooltip:hover::after {
+      opacity: 1;
+    }
+
+    /* === Project Card Styles === */
+    .project-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .project-card {
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 15px;
+      width: 300px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .project-card img {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+
+    .project-card h3 {
+      margin: 10px 0 5px;
+    }
+
+    .project-card p {
+      margin-bottom: 10px;
+    }
+
+    .project-card a {
+      text-decoration: none;
+      color: #0077cc;
+    }
+  </style>
 </head>
-
 <body>
-    <header>
-        <h1>Todd Upshaw | Portfolio</h1>
-        <p>Dynamic Project Rendering with JavaScript</p>
-    </header>
 
-    <section id="projects">
-        <h2>My Projects</h2>
-        <div id="projectContainer"></div>
+  <!-- Modal -->
+  <div id="welcomeModal" class="modal hidden">
+    <div class="modal-content" role="dialog">
+      <span class="close-button" id="closeModal">&times;</span>
+      <h2>🛠️ Page Under Development</h2>
+      <p>This portfolio is currently a work in progress.</p>
+    </div>
+  </div>
+
+  <header>
+    <h1 id="welcome-message">Welcome to My Portfolio</h1>
+    <div class="toggle-container">
+      <label>
+        <input type="checkbox" id="dark-mode-toggle"> Dark Mode
+      </label>
+    </div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p id="intro-text">I am a web developer learning to build interactive pages.</p>
     </section>
 
-    <script src="script.js"></script>
+    <section id="skills">
+      <h2>My Skills</h2>
+      <ul id="skills-list"></ul>
+    </section>
+
+    <section id="projects">
+      <h2>My Projects</h2>
+      <div id="project-container" class="project-container"></div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form id="contact-form">
+        <input type="text" id="name-field" placeholder="Your Name" required>
+        <input type="email" id="email-field" placeholder="Your Email Address" required>
+        <input type="text" id="subject-field" placeholder="Subject" required>
+        <textarea id="message-field" placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit" class="tooltip" data-tooltip="Click to send your message">Submit</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Name</p>
+  </footer>
+
+  <script>
+    // Modal logic
+    document.addEventListener("DOMContentLoaded", () => {
+      if (!sessionStorage.getItem("modal_shown")) {
+        const modal = document.getElementById("welcomeModal");
+        modal.classList.remove("hidden");
+
+        document.getElementById("closeModal").addEventListener("click", () => {
+          modal.classList.add("hidden");
+          sessionStorage.setItem("modal_shown", "true");
+        });
+      }
+
+      // Restore dark mode preference
+      const savedTheme = localStorage.getItem("dark_mode");
+      if (savedTheme === "enabled") {
+        document.body.classList.add("dark-mode");
+        document.getElementById("dark-mode-toggle").checked = true;
+      }
+    });
+
+    // Skills list
+    const skills = ["HTML5", "CSS3", "JavaScript", "Git & GitHub", "Responsive Design"];
+    const skillsList = document.getElementById("skills-list");
+    skills.forEach(skill => {
+      const li = document.createElement("li");
+      li.textContent = skill;
+      skillsList.appendChild(li);
+    });
+
+    // Dark mode toggle
+    const toggle = document.getElementById("dark-mode-toggle");
+    toggle.addEventListener("change", function () {
+      if (this.checked) {
+        document.body.classList.add("dark-mode");
+        localStorage.setItem("dark_mode", "enabled");
+      } else {
+        document.body.classList.remove("dark-mode");
+        localStorage.setItem("dark_mode", "disabled");
+      }
+    });
+
+    // Contact form
+    const form = document.getElementById("contact-form");
+    form.addEventListener("submit", function (event) {
+      event.preventDefault();
+      const nameInput = document.getElementById("name-field").value;
+      const submitButton = form.querySelector("button[type='submit']");
+      const originalText = submitButton.textContent;
+
+      submitButton.textContent = "Sending...";
+      submitButton.disabled = true;
+
+      setTimeout(() => {
+        alert(`Thank you, ${nameInput}! Your message has been sent.`);
+        submitButton.textContent = originalText;
+        submitButton.disabled = false;
+        form.reset();
+      }, 2500);
+    });
+
+    // Projects
+    const storedProjects = sessionStorage.getItem("projects");
+
+    if (!storedProjects) {
+      const projectList = [
+        {
+          title: "Weather App",
+          summary: "Displays real-time weather using OpenWeatherMap API.",
+          image: "https://via.placeholder.com/300x150?text=Weather+App",
+          link: "https://github.com/yourusername/weather-app"
+        },
+        {
+          title: "Task Tracker",
+          summary: "A to-do list app with filtering and localStorage support.",
+          image: "https://via.placeholder.com/300x150?text=Task+Tracker",
+          link: "https://github.com/yourusername/task-tracker"
+        },
+        {
+          title: "Portfolio Website",
+          summary: "A personal site to showcase my work and contact details.",
+          image: "https://via.placeholder.com/300x150?text=Portfolio",
+          link: "https://github.com/yourusername/portfolio"
+        }
+      ];
+      sessionStorage.setItem("projects", JSON.stringify(projectList));
+    }
+
+    const projectArray = JSON.parse(sessionStorage.getItem("projects"));
+    const container = document.getElementById("project-container");
+
+    if (projectArray && container) {
+      projectArray.forEach(project => {
+        const card = document.createElement("div");
+        card.className = "project-card";
+
+        const title = document.createElement("h3");
+        title.textContent = project.title;
+
+        const summary = document.createElement("p");
+        summary.textContent = project.summary;
+
+        const link = document.createElement("a");
+        link.href = project.link;
+        link.target = "_blank";
+
+        const image = document.createElement("img");
+        image.src = project.image;
+        image.alt = project.title + " screenshot";
+
+        link.appendChild(image);
+        card.appendChild(title);
+        card.appendChild(summary);
+        card.appendChild(link);
+
+        container.appendChild(card);
+      });
+    }
+  </script>
+
 </body>
 </html>
